--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "classname-js",
   "version": "1.0.1",
   "description": "A JavaScript API for conditionally joining class names together.",
-  "main": "index.js",
+  "main": "classname.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
